# python-mapnik

./: .gitignore  BUILD.md  Dockerfile  README.md  build.py  pyproject.toml  setup.py
.github/actions/setup-mapnik/: action.yml  setup-manylinux.sh
.github/workflows/: docker-build.yml  release.yml  test.yml
packaging/mapnik/: __init__.py
src/: mapnik_coord.cpp  mapnik_font_engine.cpp  mapnik_python.cpp  mapnik_value_converter.hpp  python_grid_utils.cpp
test/python_tests/: feature_id_test.py  image_filters_test.py  render_test.py  utilities.py
