[build-system]
requires = ["setuptools >= 80.9.0", "pybind11 >= 3.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "mapnik"
version = "4.2.0"
description = "Python bindings for Mapnik"
license = "LGPL-2.1-or-later"

keywords = ["mapnik", "beautiful maps", "cartography", "python-mapnik"]
classifiers = ["Development Status :: 4 - Beta"]
authors = [{ name = "Artem Pavlenko", email = "artem@mapnik.org" }]
maintainers = [{ name = "Artem Pavlenko", email = "artem@mapnik.org" }]

requires-python = ">= 3.12"

[project.optional-dependencies]
test = ["pytest >= 8.0", "pytest-cov >= 5.0"]

[project.urls]
Homepage = "https://mapnik.org"
Documentation = "https://github.com/mapnik/python-mapnik/wiki"
Repository = "https://github.com/mapnik/python-mapnik"
"Bug Tracker" = "https://github.com/mapnik/python-mapnik/issues"
Changelog = "https://github.com/mapnik/python-mapnik/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["test/python_tests"]

[tool.uv]
# Pin uv version for CI/dev consistency (used by astral-sh/setup-uv).
required-version = ">=0.9.0"

[tool.cibuildwheel]
# Build Python 3.12+ (matches requires-python)
# Supports 3.12, 3.13, 3.14, etc.
build = "cp3{12,13,14}-*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]
# Use pytest directly (not uv run) as uv is not available in test environment
test-command = "pytest {project}/test/python_tests -v"
test-extras = ["test"]

# Linux build configuration
[tool.cibuildwheel.linux]
# Use manylinux_2_28 (Debian 12 / Bookworm based)
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"

# macOS build configuration
[tool.cibuildwheel.macos]
# Note: archs are set per-runner in GitHub Actions workflow
# ARM64 runner builds arm64, x86_64 runner builds x86_64
# Set deployment target to match modern Homebrew libraries
# Homebrew libraries on macOS 15 require macOS 15.0+ deployment target
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }
# Repair wheel settings - bundle all dependencies for standalone wheels
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"
